# assertables-rust-crate

./: CHANGELOG.md  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  assertables.md  book.md  build.rs  cspell.json  deny.toml  funding.json  llms.json  llms.txt
.claude/: settings.local.json
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: release.yml
doc/: crates.js  developers.md  forms.md  help.html  naming.md  release.md  search-index.js  settings.html  src-files.js
doc/lib/: all.html  index.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_eq_as_result!.html  macro.assert_abs_diff_eq_as_result.html  macro.assert_abs_diff_eq_x!.html  macro.assert_abs_diff_eq_x.html  macro.assert_abs_diff_eq_x_as_result!.html  macro.assert_abs_diff_ge!.html  (+2693 more)
src/: assert.rs  assert_all.rs  assert_any.rs  assert_approx_eq.rs  assert_approx_ne.rs  assert_bag_eq.rs  assert_bag_eq_other.rs  assert_bag_ne.rs  assert_bag_ne_other.rs  assert_bag_subbag.rs  assert_bag_subbag_other.rs  assert_bag_superbag.rs  assert_bag_superbag_other.rs  assert_cmp.rs  assert_command_stderr_contains.rs  assert_command_stderr_contains_str.rs  assert_command_stderr_eq.rs  assert_command_stderr_eq_expr.rs  assert_command_stderr_eq_other.rs  assert_command_stderr_eq_str.rs  assert_command_stderr_eq_string.rs  assert_command_stderr_is_match.rs  assert_command_stderr_match.rs  assert_command_stderr_matches.rs  assert_command_stderr_regex.rs  assert_command_stdout_contains.rs  assert_command_stdout_contains_str.rs  assert_command_stdout_eq.rs  assert_command_stdout_eq_expr.rs  assert_command_stdout_eq_other.rs  assert_command_stdout_eq_str.rs  assert_command_stdout_eq_string.rs  assert_command_stdout_is_match.rs  assert_command_stdout_match.rs  assert_command_stdout_matches.rs  assert_command_stdout_regex.rs  assert_contains.rs  assert_ends_with.rs  assert_eq.rs  assert_eq2.rs  (+442 more)
tests/: comparison_examples.rs  early_exit_quotation_mark_test.rs  format_error_message_test.rs  namespace_examples.rs  return_quation_mark_test.rs  simple_examples.rs  smoke_test.rs  tests.rs  tutorial_examples.rs  validation_examples.rs
todo/: index.md
(+1827 files in other folders)
