[package]
name = "assertables"
version = "4.0.6"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2021"
description = "Assertables: Rust crate of macros `assert…!` and `assertable…!`, for testing, quality assurance, and runtime reliability. By SixArm.com."
readme = "README.md"
repository = "https://github.com/sixarm/assertables-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0-only"
keywords = ["assert", "assertable", "assertion", "macro", "test"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]

