[package]
name = "assertables"
version = "6.0.1"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2021"
description = "Assertables: Rust crate of macros `assert…!` for better testing, quality assurance, and runtime reliability."
readme = "README.md"
repository = "https://github.com/sixarm/assertables-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0-or-later"
keywords = ["assert", "assertable", "assertion", "macro", "test"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]

[dev-dependencies]
regex = "1.7.1" # Regular expressions parser, compiler, and executer
